--- a/calculator.html
+++ b/calculator.html
@@ -18,6 +18,7 @@
         <a href="./characters.html">キャラ一覧</a>
         <a href="./materials.html">素材逆引き</a>
         <a class="is-current" href="./calculator.html">育成計算</a>
+        <a href="./editor.html">データ追加</a>
         <a href="./updates.html">更新履歴</a>
       </nav>
     </div>
