--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Endfield 攻略・育成ハブ</title>
-  <meta name="description" content="Endfieldの攻略情報、育成、計算ツールをまとめるMVPサイト。">
+  <meta name="description" content="Endfieldの攻略情報、育成、計算ツールをまとめるサイト。">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans+JP:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -14,7 +14,6 @@
   <div class="bg-grid"></div>
   <div class="home-blob home-blob-a"></div>
   <div class="home-blob home-blob-b"></div>
-
   <header class="shell-header">
     <div class="shell-inner">
       <a class="logo" href="./index.html">ENDFIELD HUB</a>
@@ -27,14 +26,11 @@
       </nav>
     </div>
   </header>
-
   <main class="shell-main">
     <section class="hero hero-cute">
       <p class="badge badge-cute">MVP GUIDE</p>
       <h1>ENDFIELD<br>PLAYBOOK</h1>
-      <p class="hero-copy">
-        かわいい見た目で、情報は実用重視。キャラ確認、素材逆引き、育成不足計算までをすぐ使える形でまとめています。
-      </p>
+      <p class="hero-copy">かわいい見た目で、情報は実用重視。キャラ確認、素材逆引き、育成不足計算までまとめています。</p>
       <div class="cta-row">
         <a class="btn-primary" href="./characters.html">キャラを探す</a>
         <a class="btn-ghost" href="./calculator.html">不足素材を計算</a>
@@ -45,7 +41,6 @@
         <article class="mini-pill">計算ロジックは分離設計</article>
       </div>
     </section>
-
     <section class="panel panel-cute">
       <h2>クイックジャンプ</h2>
       <div class="card-grid">
@@ -65,9 +60,9 @@
           <a class="text-link" href="./calculator.html">計算する</a>
         </article>
         <article class="info-card info-card-cute">
-          <h3>更新履歴</h3>
-          <p>バージョン単位の差分と、どのデータを更新したかを追跡。</p>
-          <a class="text-link" href="./updates.html">履歴を見る</a>
+          <h3>データ追加</h3>
+          <p>フォーム入力で raw JSON を作成し、データ更新を簡単に。</p>
+          <a class="text-link" href="./editor.html">追加する</a>
         </article>
       </div>
     </section>
