--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>育成コスト計算 | Endfield</title>
+  <title>育成コスト・ダメージ計算 | Endfield</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans+JP:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -40,11 +40,51 @@
           <input id="targetLevel" type="number" min="1" max="60" value="60">
         </label>
         <label>所持素材（JSON 任意）
-          <input id="ownedMaterials" type="text" placeholder='{"m_alloy": 5, "m_core": 2}'>
+          <input id="ownedMaterials" type="text" placeholder='{"refined_alloy": 5}'>
         </label>
-        <button class="btn-primary" type="submit">計算する</button>
+        <button class="btn-primary" type="submit">育成コストを計算</button>
       </form>
       <div id="calcResult" class="stack"></div>
+    </section>
+
+    <section class="panel">
+      <div class="panel-head">
+        <h1 class="page-title">ダメージ計算（Stage 1）</h1>
+      </div>
+      <form id="damageForm" class="form-grid">
+        <label>ATK
+          <input id="dAtk" type="number" value="1000" min="0">
+        </label>
+        <label>スキル倍率
+          <input id="dMultiplier" type="number" value="2.5" step="0.01" min="0">
+        </label>
+        <label>会心率（0〜1）
+          <input id="dCritRate" type="number" value="0.2" step="0.01" min="0" max="1">
+        </label>
+        <label>会心ダメージ（0.5=50%）
+          <input id="dCritDamage" type="number" value="0.5" step="0.01" min="0">
+        </label>
+        <label>属性補正
+          <input id="dElementModifier" type="number" value="1" step="0.01" min="0">
+        </label>
+        <label>固定バフ
+          <input id="dFlatBuff" type="number" value="0" step="1">
+        </label>
+        <label>割合バフ（0.2=20%）
+          <input id="dPercentBuff" type="number" value="0" step="0.01">
+        </label>
+        <label>敵防御
+          <input id="dEnemyDef" type="number" value="300" min="0">
+        </label>
+        <label>敵耐性（0.2=20%）
+          <input id="dEnemyResist" type="number" value="0" step="0.01">
+        </label>
+        <label>ヒット数
+          <input id="dHitCount" type="number" value="3" min="1">
+        </label>
+        <button class="btn-primary" type="submit">ダメージを計算</button>
+      </form>
+      <div id="damageResult" class="stack"></div>
     </section>
   </main>
 
